# meta-openenv-rl

./: .gitignore  Dockerfile  README.md  baseline.py  baseline_results.json  inference.py  openenv.yaml  pyproject.toml  requirements.txt
app/: environment.py  main.py  models.py
app/tasks/: task1_nginx.py  task2_oom.py  task3_disk.py
server/: __init__.py  app.py
tests/: test_environment.py
