[project]
name = "sre-openenv"
version = "0.1.0"
description = "SRE OpenEnv - OpenAI Environment for SRE tasks"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.10.0",
    "huggingface-hub>=0.25.0",
    "openai>=1.10.0",
    "httpx>=0.27.0",
    "pytest>=8.2.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
sre-openenv-server = "server.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "server"]

[tool.uv]
package = true
